codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_pending_agent_switch_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  Switching agent...                                                      v111  "
