codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_previous_timing_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"                                                            v65 · 800ms  ≋3ms  "
